--- a/style.css
+++ b/style.css
@@ -135,9 +135,10 @@
     
     .formas {
       width:200px;
-      height:20px;
+      height:50px;
       border-radius:15px;
-      text-align:center;
+      padding:0 10px;
+      text-align:left;
     }
     
     
@@ -253,13 +254,22 @@
     
       .footer__wrapper {
         display: flex;
-        justify-content:space-around;
+        justify-content:space-between;
+        margin-bottom:20px;
       }
     
       #player {
         width: 800px;
         height: 450px;
         margin: auto;
+      }
+
+      .text-1 {
+        font-size:20px;
+      }
+
+      .text-2 {
+        font-size:20px;
       }
     
      
@@ -269,11 +279,36 @@
     @media (min-width:200px) and (max-width:1100px) {
 
       .text-description {
+        padding:20px;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        text-align: center;
+        align-items: center;
         margin-bottom:20px;
+      }
+
+      .text-description1 {
+        text-align: center;
       }
 
       .text-main-section {
         margin-bottom:20px;
+      }
+
+      .btn {
+        margin-bottom:20px;
+      }
+      
+      .formas {
+        height:50px;
+        padding:0 10px;
+        text-align:left;
+      }
+
+      .video-mobile {
+        width:300px;
+        height:200px;
       }
     
       .footer__wrapper {
